# realtime-translate

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-local-mac.txt  requirements-local-windows.txt  requirements-local.txt  requirements.txt  test_cloud.py  test_e2e.py  test_whisper.py
backend/app/: config.py  db.py  detect.py  docx_export.py  languages.py  main.py  models.py  nllb.py  text_guard.py  ws.py
backend/app/backends/: asr.py  llm.py
backend/app/engines/: base.py  cloud_openai.py  local_seamless.py  local_whisper.py  mock.py  registry.py
backend/app/postprocess/: analyze.py  diarize.py  summarize.py  translate.py
backend/app/routers/: settings.py  transcripts.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/transcribe/: page.tsx
frontend/components/: RollingSubtitles.tsx  SummaryView.tsx
frontend/lib/: api.ts  useTranslator.ts
frontend/public/: pcm-worklet.js
